--- a/dick-questionnaire/index.html
+++ b/dick-questionnaire/index.html
@@ -51,7 +51,9 @@
                 <div>4</div>
                 <div>Adaptability</div>
               </th>
-              <th scope="col"></th>
+              <th scope="col">
+                <div class="text-uppercase">score</div>
+              </th>
             </tr>
           </thead>
           <tbody>
