feat: add total score

--- a/dick-questionnaire/index.html
+++ b/dick-questionnaire/index.html
@@ -655,6 +655,14 @@
                 <div class="score">Please first select scores</div>
               </td>
             </tr>
+
+
+            <tr class="total-score">
+              <td class="text-center" colspan="10">
+                <div class="text-capitalize">overall self-assessment score:</div>
+                <div class="score">Please enter all the scores to see the result!</div>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
