chore: restructure js script

--- a/dick-questionnaire/index.html
+++ b/dick-questionnaire/index.html
@@ -361,7 +361,7 @@
             </tr>
             <tr class="smart-supply-chain">
               <td class="text-center" colspan="10">
-                <div class="text-uppercase">sekf-assessment score smart supply chain:</div>
+                <div class="text-uppercase">self-assessment score smart supply chain:</div>
                 <div class="score">Please first select scores</div>
               </td>
             </tr>
