feat: logic update

--- a/dick-questionnaire/index.html
+++ b/dick-questionnaire/index.html
@@ -149,7 +149,7 @@
               <td class="description">Using advanced analytics and machine learning, able to predict machine performance and maintenance enabling implementation of use cases like predictive maintenance to increase efficiency and reduce downtime.</td>
               <td class="description">The production systems are self-learning and self-optimizing, and using real-time data and advanced algorithms to continuously improve performance and adapt to changing conditions.</td>
               <td>
-                <select class="custom-select" onchange='selectHandler("smart-production")()'>
+                <select class="custom-select important" onchange='selectHandler("smart-production")()'>
                   <option selected>Select</option>
                   <option value="-2">-2</option>
                   <option value="-1">-1</option>
@@ -171,7 +171,7 @@
               <td class="description">Use of advanced data analytics tools, such as machine learning and AI, to predict outcomes and optimize production and customer behavior and using data-driven insights to make strategic decisions and continuously improve operations.</td>
               <td class="description">Decisions are fully automated based on decision engines that process real time data. Use of advanced data analytics tools that are fully integrated with other systems in the company, providing a seamless and flexible operation.</td>
               <td>
-                <select class="custom-select" onchange='selectHandler("smart-production")()'>
+                <select class="custom-select important" onchange='selectHandler("smart-production")()'>
                   <option selected>Select</option>
                   <option value="-2">-2</option>
                   <option value="-1">-1</option>
@@ -186,7 +186,7 @@
             <tr class="smart-production">
               <td class="text-center" colspan="10">
                 <div class="text-uppercase">self-assessment score smart production:</div>
-                <div class="score">Please first select scores</div>
+                <div class="score special-average" threshold-score="2" threshold-count="3">Please first select scores</div>
               </td>
             </tr>
 
@@ -270,7 +270,7 @@
               <td class="description">Production issues can be anticipated before they occur through advanced analytics, leading to improved efficiency and productivity.</td>
               <td class="description">A digital twin automatically adjusts the production process based on real-time data and changing shopfloor conditions.</td>
               <td>
-                <select class="custom-select" onchange='selectHandler("smart-process")()'>
+                <select class="custom-select important" onchange='selectHandler("smart-process")()'>
                   <option selected>Select</option>
                   <option value="-2">-2</option>
                   <option value="-1">-1</option>
@@ -284,7 +284,7 @@
             <tr class="smart-process">
               <td class="text-center" colspan="10">
                 <div class="text-uppercase">self-assessment score smart process:</div>
-                <div class="score">Please first select scores</div>
+                <div class="score special-average" threshold-score="2" threshold-count="3">Please first select scores</div>
               </td>
             </tr>
 
@@ -347,7 +347,7 @@
               <td class="description">Use of AI and ML to predict supply chain risks and optimize demand and supply flow based on scenario simulation.</td>
               <td class="description">Dynamic supply chain model and use of supply chain twins which can quickly respond to changes in customer demand, market trends, or supply chain disruptions.</td>
               <td>
-                <select class="custom-select" onchange='selectHandler("smart-supply-chain")()'>
+                <select class="custom-select important" onchange='selectHandler("smart-supply-chain")()'>
                   <option selected>Select</option>
                   <option value="-2">-2</option>
                   <option value="-1">-1</option>
@@ -362,7 +362,7 @@
             <tr class="smart-supply-chain">
               <td class="text-center" colspan="10">
                 <div class="text-uppercase">sekf-assessment score smart supply chain:</div>
-                <div class="score">Please first select scores</div>
+                <div class="score special-average" threshold-score="2" threshold-count="3">Please first select scores</div>
               </td>
             </tr>
 
@@ -466,7 +466,7 @@
               <td class="description">Implementation of predictive analytics to provide customers with accurate estimated delivery dates and proactively identify any potential issues that may delay their orders. Personalized recommendations and notifications are offered to customers based on their order history and preferences.</td>
               <td class="description"></td>
               <td>
-                <select class="custom-select" onchange='selectHandler("smart-services")()'>
+                <select class="custom-select important" onchange='selectHandler("smart-services")()'>
                   <option selected>Select</option>
                   <option value="-2">-2</option>
                   <option value="-1">-1</option>
@@ -487,7 +487,7 @@
               <td class="description">Predictive information to the customer to plan their orders in advance based on analytics of market shortages</td>
               <td class="description"></td>
               <td>
-                <select class="custom-select" onchange='selectHandler("smart-services")()'>
+                <select class="custom-select important" onchange='selectHandler("smart-services")()'>
                   <option selected>Select</option>
                   <option value="-2">-2</option>
                   <option value="-1">-1</option>
@@ -501,7 +501,7 @@
             <tr class="smart-services">
               <td class="text-center" colspan="10">
                 <div class="text-uppercase">self-assessment score smart services:</div>
-                <div class="score">Please first select scores</div>
+                <div class="score special-average" threshold-score="2" threshold-count="3">Please first select scores</div>
               </td>
             </tr>
 
@@ -637,7 +637,7 @@
               <td class="description">An advanced data strategy allows employees to focus on predictive analytics and machine learning. Employees are fully trained in advanced data analysis techniques, and data-driven decision making is an integral part of the company culture.</td>
               <td class="description">Decision making processes are largely automated, employees supervise the decisions and intervene in exceptional cases only.</td>
               <td>
-                <select class="custom-select" onchange='selectHandler("culture-and-mindset")()'>
+                <select class="custom-select important" onchange='selectHandler("culture-and-mindset")()'>
                   <option selected>Select</option>
                   <option value="-2">-2</option>
                   <option value="-1">-1</option>
@@ -652,7 +652,7 @@
             <tr class="culture-and-mindset">
               <td class="text-center" colspan="10">
                 <div class="text-uppercase">self-assessment score culture and mindset:</div>
-                <div class="score">Please first select scores</div>
+                <div class="score special-average" threshold-score="2" threshold-count="3">Please first select scores</div>
               </td>
             </tr>
 
